tests/fixtures/valid/list/list_float.py
# List of floats
floats: list[float] = [1.1, 2.2, 3.3, 4.4]

print(floats[0])
print(floats[1])
print(floats[2])
print(len(floats))
