tests/fixtures/invalid/pow_list_float_int.py
# Cannot call pow() with List[int], Float, Int
x = pow([1, 2, 3], 1.0, 1)
